test_regress/t/t_tagged_case_notunion_bad.out
%Error: t/t_tagged_case_notunion_bad.v:23:5: Case matches expression must be a tagged union type
   23 |     case (u) matches
      |     ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
